--- a/html/css/style.css
+++ b/html/css/style.css
@@ -32,99 +32,99 @@ body {
 #submit {
   position: absolute;
   width: 3.5vh;
-  height: 3.0vh;
-  bottom: 14vh;
-  left: 3.0vh;
+  height: 3vh;
+  bottom: 22.5vh;
+  left: 4.5vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
 
 #submit:hover {
-  background: rgba(255, 255, 255, 0.25);
+  cursor: pointer;
 }
 
 #disconnect {
   position: absolute;
   width: 3.5vh;
-  height: 3.0vh;
-  bottom: 14vh;
-  right: 2.0vh;
+  height: 3vh;
+  bottom: 12vh;
+  left: 4.5vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
 
 #disconnect:hover {
-  background: rgba(255, 255, 255, 0.25);
+  cursor: pointer;
 }
 
 #volumeUp {
   position: absolute;
-  width: 3.8vh;
-  height: 3.7vh;
-  bottom: 29.5vh;
-  right: 0.9vh;
+  width: 3.5vh;
+  height: 3vh;
+  bottom: 35.5vh;
+  right: 3.7vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
 
 #volumeUp:hover {
-  background: rgba(255, 255, 255, 0.25);
+  cursor: pointer;
 }
 
 #volumeDown {
   position: absolute;
-  width: 3.8vh;
-  height: 3.6vh;
-  bottom: 18.5vh;
-  right: 0.9vh;
+  width: 3.5vh;
+  height: 3vh;
+  bottom: 35.5vh;
+  right: 6.5vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
 
 #volumeDown:hover {
-  background: rgba(255, 255, 255, 0.25);
+  cursor: pointer;
 }
 
 #increaseradiochannel {
   position: absolute;
-  width: 3.8vh;
-  height: 3.8vh;
-  bottom: 29.5vh;
-  left: 0.8vh;
+  width: 3.5vh;
+  height: 3vh;
+  bottom: 22.5vh;
+  right: 3.8vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
 
 #increaseradiochannel:hover {
-  background: rgba(255, 255, 255, 0.25);
+  cursor: pointer;
 }
 
 #decreaseradiochannel {
   position: absolute;
-  width: 3.8vh;
-  height: 3.6vh;
-  bottom: 18.5vh;
-  left: 0.8vh;
+  width: 3.5vh;
+  height: 3vh;
+  bottom: 12vh;
+  right: 3.8vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
 
 #decreaseradiochannel:hover {
-  background: rgba(255, 255, 255, 0.25);
+  cursor: pointer;
 }
 
 #poweredOff {
   position: absolute;
-  width: 3.3vh;
-  height: 2.9vh;
-  bottom: 50vh;
-  left: 0.0vh;
+  width: 1.6vh;
+  height: 2vh;
+  bottom: 35.3vh;
+  left: 6.5vh;
   border-radius: 5px;
   transition: all 0.1s linear;
 }
 
 #poweredOff:hover {
-  background: rgba(255, 255, 255, 0.25);
+  cursor: pointer;
 }
 
 .onoff button {
@@ -134,8 +134,8 @@ body {
 
 .channel {
   position: absolute;
-  bottom: 24vh;
-  left: 5.3vh;
+  bottom: 28.8vh;
+  left: 4.8vh;
   background: none;
 }
 
@@ -155,6 +155,7 @@ body {
   background: none;
   outline: none;
   font-family: 'Fira Code', monospace;
+  color: rgba(0,0,0,0.7);
   width: 5vw;
 }
 
